--- a/TalentShow/app/src/main/res/layout/casting_card_view.xml
+++ b/TalentShow/app/src/main/res/layout/casting_card_view.xml
@@ -18,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/casting_card_layout"
             android:layout_height="match_parent"
             android:layout_width="match_parent">
 
@@ -55,6 +56,7 @@
                     android:elevation="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="@id/activity_casting_name" />
 
                 <ImageView
@@ -68,19 +70,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/casting_activity_avatar" />
 
-                <View
-                    android:id="@+id/casting_fragment_fullscreen"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginTop="15dp"
-                    android:padding="15dp"
-                    android:elevation="16dp"
-                    android:foregroundGravity="center"
-                    android:background="@drawable/full_screen_white"
-                    app:layout_constraintTop_toBottomOf="@id/activity_casting_share_btn"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    />
+
 
                 <TextView
                     android:id="@+id/activity_casting_name"
@@ -102,33 +92,48 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
+                android:id="@+id/casting_fragment_control_buttons"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:elevation="20dp"
-                android:background="@drawable/casting_bottom_gradient"
-                app:layout_constraintBottom_toBottomOf="parent">
+                android:visibility="invisible"
+                android:layout_marginBottom="100dp"
+                android:background="@drawable/casting_buttons_gradient"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
 
-
-                <TextView
-                    android:id="@+id/activity_casting_description"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="65dp"
-                    android:layout_marginTop="13dp"
-                    android:fontFamily="@font/roboto"
-                    android:gravity="start"
-                    android:lineSpacingExtra="2sp"
-                    android:text="Это описание к видео, которое написал автор, чтобы было понятно, что он хочет сказать своим творчеством. Наверное, тут очень ограничен обхем текста."
-                    android:textColor="@color/white"
-                    android:textSize="13sp"
-                    android:translationY="-1.05sp"
-                    android:visibility="gone"
-                    app:layout_constraintTop_toTopOf="parent"
+                <View
+                    android:id="@+id/casting_fragment_fullscreen"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginStart="5dp"
+                    android:padding="15dp"
+                    android:elevation="16dp"
+                    android:foregroundGravity="center"
+                    android:background="@drawable/full_screen_white"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@id/casting_fragment_volume"
+                    />
+
+                <View
+                    android:id="@+id/casting_fragment_volume"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="15dp"
+                    android:padding="15dp"
+                    android:elevation="16dp"
+                    android:foregroundGravity="center"
+                    android:background="@drawable/volume_on_white"
+                    app:layout_constraintBottom_toTopOf="@id/casting_fragment_fullscreen"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
