--- a/TalentShow/app/src/main/res/layout/battle_video_player.xml
+++ b/TalentShow/app/src/main/res/layout/battle_video_player.xml
@@ -1,92 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/black"
-    tools:context=".presentation.main.fragments.semifinalists.SemifinalistsFragment">
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/fragment_semifinalists_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/fragment_semifinalists_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:text="02 : 03 : 21"
-        android:textColor="@color/white"
-        android:textSize="28sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_semifinalists_list" />
-
-    <TextView
-        android:id="@+id/fragment_semifinalists_days"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="дн."
-        android:gravity="top"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/fragment_semifinalists_time"
-        app:layout_constraintStart_toStartOf="@+id/fragment_semifinalists_time"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="top"
-        android:text="ч."
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toStartOf="@+id/fragment_semifinalists_minutes"
-        app:layout_constraintStart_toEndOf="@+id/fragment_semifinalists_days"
-        app:layout_constraintTop_toBottomOf="@id/fragment_semifinalists_time" />
-
-    <TextView
-        android:id="@+id/fragment_semifinalists_minutes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="мин."
-        android:gravity="top"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/fragment_semifinalists_time"
-        app:layout_constraintEnd_toEndOf="@+id/fragment_semifinalists_time"
-        />
-
-
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="match_parent"
-        android:layout_height="360dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginEnd="6dp"
-        app:cardUseCompatPadding="true"
-        app:cardElevation="2dp"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_semifinalists_days">
-
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    android:layout_height="360dp"
+    app:cardCornerRadius="20dp"
+    app:cardPreventCornerOverlap="true"
+    app:strokeColor="@color/pink"
+    app:strokeWidth="2dp"
+    android:id="@+id/battle_video_player"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
             <com.google.android.exoplayer2.ui.PlayerView
                 android:id="@+id/rating_item_video"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:elevation="-1dp"
                 app:controller_layout_id="@layout/exo_playback_control_view"
                 app:resize_mode="zoom">
 
@@ -110,8 +38,6 @@
                 android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
-
-
 
             <View
                 android:id="@+id/rating_item_restart"
@@ -149,10 +75,10 @@
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:paddingTop="200dp"
                 android:elevation="10dp"
+                android:layout_gravity="bottom"
                 android:background="@drawable/casting_bottom_gradient"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -236,35 +162,5 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@id/rating_item_ava" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.cardview.widget.CardView>
-
-
-    <View
-        android:id="@+id/btn_like"
-        android:layout_width="43dp"
-        android:layout_height="40dp"
-        android:background="@drawable/like"
-        android:elevation="10dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:gravity="center"
-        android:text="Выбрано 0 талантов"
-        android:textColor="@color/grayText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_like" />
-
-
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</com.google.android.material.card.MaterialCardView>
